hphp/test/slow/dv_array/parse-error3.php.expectf

Fatal error: syntax error, unexpected ',' in %s/parse-error3.php on line 4
